k8s/mongo-express/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  type: LoadBalancer
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: mongo-express
